--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -36,5 +36,7 @@ models:
     # Applies to all files under models/example/
     staging:
       materialized: view
+    intermediate:
+      materialized: view
     marts:
       materialized: view
